ghc-6.2/hslibs/win32/Win32Font_stub_ffi.h

#include <windows.h>
#include "errors.h"
#include "win32debug.h"
#include "HsFFI.h"
extern UINT prim_aNSI_CHARSET();
extern UINT prim_dEFAULT_CHARSET();
extern UINT prim_sYMBOL_CHARSET();
extern UINT prim_sHIFTJIS_CHARSET();
extern UINT prim_hANGEUL_CHARSET();
extern UINT prim_cHINESEBIG5_CHARSET();
extern UINT prim_oEM_CHARSET();
extern UINT prim_dEFAULT_PITCH();
extern UINT prim_fIXED_PITCH();
extern UINT prim_vARIABLE_PITCH();
extern UINT prim_fF_DONTCARE();
extern UINT prim_fF_ROMAN();
extern UINT prim_fF_SWISS();
extern UINT prim_fF_MODERN();
extern UINT prim_fF_SCRIPT();
extern UINT prim_fF_DECORATIVE();
extern UINT prim_familyMask();
extern UINT prim_pitchMask();
extern UINT prim_oUT_DEFAULT_PRECIS();
extern UINT prim_oUT_STRING_PRECIS();
extern UINT prim_oUT_CHARACTER_PRECIS();
extern UINT prim_oUT_STROKE_PRECIS();
extern UINT prim_oUT_TT_PRECIS();
extern UINT prim_oUT_DEVICE_PRECIS();
extern UINT prim_oUT_RASTER_PRECIS();
extern UINT prim_oUT_TT_ONLY_PRECIS();
extern UINT prim_cLIP_DEFAULT_PRECIS();
extern UINT prim_cLIP_CHARACTER_PRECIS();
extern UINT prim_cLIP_STROKE_PRECIS();
extern UINT prim_cLIP_MASK();
extern UINT prim_cLIP_LH_ANGLES();
extern UINT prim_cLIP_TT_ALWAYS();
extern UINT prim_cLIP_EMBEDDED();
extern UINT prim_dEFAULT_QUALITY();
extern UINT prim_dRAFT_QUALITY();
extern UINT prim_pROOF_QUALITY();
extern unsigned int prim_fW_DONTCARE();
extern unsigned int prim_fW_THIN();
extern unsigned int prim_fW_EXTRALIGHT();
extern unsigned int prim_fW_LIGHT();
extern unsigned int prim_fW_NORMAL();
extern unsigned int prim_fW_MEDIUM();
extern unsigned int prim_fW_SEMIBOLD();
extern unsigned int prim_fW_BOLD();
extern unsigned int prim_fW_EXTRABOLD();
extern unsigned int prim_fW_HEAVY();
extern unsigned int prim_fW_REGULAR();
extern unsigned int prim_fW_ULTRALIGHT();
extern unsigned int prim_fW_DEMIBOLD();
extern unsigned int prim_fW_ULTRABOLD();
extern unsigned int prim_fW_BLACK();
extern void* prim_createFont(INT arg1,INT arg2,INT arg3,INT arg4,unsigned int arg5,int arg6,int arg7,int arg8,UINT arg9,UINT arg10,UINT arg11,UINT arg12,UINT arg13,char * arg14);
extern HFONT access_prim_createFont_res1(HsPtr);
extern int access_prim_createFont_gc_failed(HsPtr);
extern void* access_prim_createFont_gc_failstring(HsPtr);
extern void prim_deleteFont(HFONT arg1);
extern WORD prim_oEM_FIXED_FONT();
extern WORD prim_aNSI_FIXED_FONT();
extern WORD prim_aNSI_VAR_FONT();
extern WORD prim_sYSTEM_FONT();
extern WORD prim_dEVICE_DEFAULT_FONT();
extern WORD prim_sYSTEM_FIXED_FONT();
extern HFONT prim_getStockFont(WORD arg1);